[Feat]: Improve logging and assertions in service classes and view classes, update local translation data type and added constant in UI components